페이지 내용 HTML 작성

--- a/apple-clone-v10/blank.html
+++ b/apple-clone-v10/blank.html
@@ -27,6 +27,60 @@
 				<a href="#">구입하기</a>
 			</div>
 		</nav>
+		<section class="scroll-section" id="scroll-section-0">
+			<h1>AirMug Pro</h1>
+			<div class="sticky-elem main-massage">
+				<p>온전히 빠져들게 하는<br>최고급 세라믹</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>주변 맛을 느끼게 해주는<br>주변 맛 허용 모드</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>온종일 편안한<br>맞춤형 손잡이</p>
+			</div>
+			<div class="sticky-elem main-message">
+				<p>새롭게 입가를<br>찾아온 매혹</p>
+			</div>
+		</section>
+		<section class="scroll-section" id="scroll-section-1">
+			<p>
+				<strong>보통 스크롤 영역</strong>
+				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni tenetur aspernatur nostrum, autem totam obcaecati optio vel ut, at, repudiandae fugit itaque nihil dolores! Molestiae est doloremque illo dignissimos odit placeat quos aut, molestias debitis, voluptatem, dolores unde accusantium voluptates? Fuga dolores fugit distinctio deserunt facilis culpa animi placeat expedita iusto doloribus, nostrum similique saepe delectus neque adipisci in iste repudiandae autem minima doloremque. Culpa cupiditate cum aspernatur quam quae tempore! Incidunt repellendus saepe nisi asperiores debitis. Voluptatum consequatur ipsum corrupti iure laborum ex nobis earum distinctio rem, molestias tenetur ratione molestiae, illum quo. Quo officia repudiandae assumenda dolorem odio exercitationem reprehenderit, nostrum suscipit facere distinctio aperiam soluta voluptatibus quibusdam quisquam est molestias debitis nihil iste saepe aliquid aut aliquam placeat. Dolorum quod sapiente nulla quae reprehenderit eius sunt ad amet excepturi earum nisi quos sit iure cupiditate, ab id alias iusto dolor eaque, quidem odit ipsa aperiam suscipit nihil. Culpa vero ratione rem recusandae ea necessitatibus ab minus consectetur debitis, expedita nulla nobis quidem! Ducimus ipsam deserunt dolorem suscipit delectus molestias totam voluptatibus quasi fugit, repellendus exercitationem reprehenderit placeat repudiandae rerum facere facilis. Earum accusantium magni non, culpa vero architecto praesentium molestiae numquam autem vel. Quas quo voluptatum perferendis.
+			</p>
+		</section>
+		<section class="scroll-section" id="scroll-section-2">
+			<div class="sticky-elem main-massage">
+				<p>
+					<small>편안한 촉감</small>
+					입과 하나 되다
+				</p>
+			</div>
+			<div class="sticky-elem main-massage">
+				<p>
+					편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
+				</p>
+				<div class="pin"></div>
+			</div>
+			div class="sticky-elem main-massage">
+				<p>
+					디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
+				</p>
+				<div class="pin"></div>
+			</div>
+		</section>
+		<section class="scroll-section" id="scroll-section-3">
+			<p class="mid-message">
+				<strong>Retina 머그</strong><br>
+				아이디어를 광활하게 펼칠<br>
+				아름다운 부드러운 음료 공간
+			</p>
+			<p class="canvas caption">
+				Lorem ipsum dolor sit amet, consectetur adipisicing elit. At saepe consequuntur cupiditate mollitia! Tempore deleniti animi accusamus commodi molestias explicabo eos itaque. Id illum distinctio hic culpa. Debitis atque ullam, perferendis autem tempora deleniti sed, repellat quaerat neque velit reprehenderit facilis voluptatibus sit dignissimos quisquam laboriosam id inventore. Possimus, omnis. Quia voluptatum impedit nisi deleniti maxime vitae, neque laudantium at dolorum voluptates numquam sequi. Impedit dolores ut enim doloribus soluta tempora non, officia nihil. Commodi reiciendis similique, illo odio labore iusto sed dignissimos reprehenderit assumenda ab recusandae, minus quibusdam nisi aperiam quis accusamus placeat vitae. Earum ab asperiores magni porro!
+			</p>
+		</section>
+		<footer class="footer">
+			2022, Mari
+		</footer>
 	</div>
 </body>
 </html>
