--- a/apple-clone-v10/blank.html
+++ b/apple-clone-v10/blank.html
@@ -29,7 +29,7 @@
 		</nav>
 		<section class="scroll-section" id="scroll-section-0">
 			<h1>AirMug Pro</h1>
-			<div class="sticky-elem main-massage">
+			<div class="sticky-elem main-message">
 				<p>온전히 빠져들게 하는<br>최고급 세라믹</p>
 			</div>
 			<div class="sticky-elem main-message">
@@ -43,25 +43,25 @@
 			</div>
 		</section>
 		<section class="scroll-section" id="scroll-section-1">
-			<p>
+			<p class="description">
 				<strong>보통 스크롤 영역</strong>
 				Lorem ipsum dolor sit amet consectetur, adipisicing elit. Magni tenetur aspernatur nostrum, autem totam obcaecati optio vel ut, at, repudiandae fugit itaque nihil dolores! Molestiae est doloremque illo dignissimos odit placeat quos aut, molestias debitis, voluptatem, dolores unde accusantium voluptates? Fuga dolores fugit distinctio deserunt facilis culpa animi placeat expedita iusto doloribus, nostrum similique saepe delectus neque adipisci in iste repudiandae autem minima doloremque. Culpa cupiditate cum aspernatur quam quae tempore! Incidunt repellendus saepe nisi asperiores debitis. Voluptatum consequatur ipsum corrupti iure laborum ex nobis earum distinctio rem, molestias tenetur ratione molestiae, illum quo. Quo officia repudiandae assumenda dolorem odio exercitationem reprehenderit, nostrum suscipit facere distinctio aperiam soluta voluptatibus quibusdam quisquam est molestias debitis nihil iste saepe aliquid aut aliquam placeat. Dolorum quod sapiente nulla quae reprehenderit eius sunt ad amet excepturi earum nisi quos sit iure cupiditate, ab id alias iusto dolor eaque, quidem odit ipsa aperiam suscipit nihil. Culpa vero ratione rem recusandae ea necessitatibus ab minus consectetur debitis, expedita nulla nobis quidem! Ducimus ipsam deserunt dolorem suscipit delectus molestias totam voluptatibus quasi fugit, repellendus exercitationem reprehenderit placeat repudiandae rerum facere facilis. Earum accusantium magni non, culpa vero architecto praesentium molestiae numquam autem vel. Quas quo voluptatum perferendis.
 			</p>
 		</section>
 		<section class="scroll-section" id="scroll-section-2">
-			<div class="sticky-elem main-massage">
+			<div class="sticky-elem main-message">
 				<p>
 					<small>편안한 촉감</small>
 					입과 하나 되다
 				</p>
 			</div>
-			<div class="sticky-elem main-massage">
+			<div class="sticky-elem main-message">
 				<p>
 					편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
 				</p>
 				<div class="pin"></div>
 			</div>
-			div class="sticky-elem main-massage">
+			<div class="sticky-elem main-message">
 				<p>
 					디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
 				</p>
