--- a/apple-clone-v10/blank.html
+++ b/apple-clone-v10/blank.html
@@ -55,13 +55,13 @@
 					입과 하나 되다
 				</p>
 			</div>
-			<div class="sticky-elem main-message">
+			<div class="sticky-elem desc-message">
 				<p>
 					편안한 목넘김을 완성하는 디테일한 여러 구성 요소들, 우리는 이를 하나하나 새롭게 살피고 재구성하는 과정을 거쳐 새로운 수준의 머그, AirMug Pro를 만들었습니다. 입에 뭔가 댔다는 감각은 어느새 사라지고 오롯이 당신과 음료만 남게 되죠.
 				</p>
 				<div class="pin"></div>
 			</div>
-			<div class="sticky-elem main-message">
+			<div class="sticky-elem desc-message">
 				<p>
 					디자인 앤 퀄리티 오브 스웨덴,<br>메이드 인 차이나
 				</p>
@@ -74,7 +74,7 @@
 				아이디어를 광활하게 펼칠<br>
 				아름다운 부드러운 음료 공간
 			</p>
-			<p class="canvas caption">
+			<p class="canvas-caption">
 				Lorem ipsum dolor sit amet, consectetur adipisicing elit. At saepe consequuntur cupiditate mollitia! Tempore deleniti animi accusamus commodi molestias explicabo eos itaque. Id illum distinctio hic culpa. Debitis atque ullam, perferendis autem tempora deleniti sed, repellat quaerat neque velit reprehenderit facilis voluptatibus sit dignissimos quisquam laboriosam id inventore. Possimus, omnis. Quia voluptatum impedit nisi deleniti maxime vitae, neque laudantium at dolorum voluptates numquam sequi. Impedit dolores ut enim doloribus soluta tempora non, officia nihil. Commodi reiciendis similique, illo odio labore iusto sed dignissimos reprehenderit assumenda ab recusandae, minus quibusdam nisi aperiam quis accusamus placeat vitae. Earum ab asperiores magni porro!
 			</p>
 		</section>
